--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 kotlin.code.style=official
 
-assertJVersion = 3.14.0
+assertJVersion = 3.15.0
 jacocoToolVersion = 0.8.3
-jupiterVersion = 5.6.0-M1
+jupiterVersion = 5.6.0
 ktlintToolVersion = 0.36.0
 mockkVersion = 1.9.3
-poiVersion = 4.1.1
+poiVersion = 4.1.2
