Seeing if I can get github actions to push coverage to codecov.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,10 @@ jobs:
     - name: Check
       run: ./gradlew check
 
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1
+
+
 
 
 
